platform/networking/network-policies/rules/allow/ingress/apigateway/allow-from-alb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-alb  
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: apigateway-ingress
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tier: ingress
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8123
